--- a/style.css
+++ b/style.css
@@ -17,3 +17,26 @@ header { height: 800px;
  font-size: 1.5em;
   color: white;
   font-weight: lighter}
+
+ul {
+  list-style-type: none;
+  padding: 40px 40px 0px 20px;
+  text-align: right;
+}
+
+li {
+  display: inline-block;
+  text-align: right;
+  
+  font-family: Arial, Helvetica, sans-serif; 
+ font-size: .85em;
+
+  font-weight: lighter;
+  width: 15%;
+  min-width: 50px;
+  
+  text-transform: uppercase;
+}
+
+a {color: white;
+text-decoration: none;}
